cmake_minimum_required(VERSION 3.14)
project(relief_generation)
find_package(pmp)
set(CMAKE_CXX_STANDARD 14)
set(GLEW_H /usr/local/include/GL)
set(GLFW_H /usr/local/include/GLFW)
set(IMGUI_H /usr/local/include/imgui)
set(STB_H /usr/local/include/stb)
include_directories(${GLEW_H} ${GLFW_H} ${STB_H} ${IMGUI_H})
include_directories(/usr/local/include)
include_directories(pmp)
include_directories(/usr/local/include/eigen3)
link_libraries(/usr/local/lib/libpmp_vis.a)
link_libraries(/usr/local/lib/libstb_image.a)
link_libraries(/usr/local/lib/libimgui.a)
set(GLEW_LINK /usr/local/lib/libGLEW.2.1.dylib)
set(GLFW_LINK /usr/local/lib/libglfw.3.dylib)
link_libraries(${OPENGL} ${GLEW_LINK} ${GLFW_LINK})
add_executable(relief_generation main.cpp)
target_link_libraries(relief_generation /usr/local/lib/libpmp.dylib)
target_link_libraries(relief_generation pmp)
if (APPLE)
    target_link_libraries(relief_generation "-framework OpenGL")
    target_link_libraries(relief_generation "-framework GLUT")
endif()
